--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Uol Bate Papo</title>
+    <title>Projeto BatePapo Uol </title>
+    <link rel="stylesheet" href="./CSS/reset.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
-    
+    <div class="conteudo">
+        <div class="topo">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWkEE11QTE2vMNSjJgp02QPRHuxulhptE9oO1ceMZ-jzQ420zTtnWO1Q77DNJQypWy7B0&usqp=CAU">
+            <ion-icon name="people-sharp"></ion-icon>
+        </div>
+        <div class="mensagens"></div>
+        <div class="enviar">
+            <input class="barra-envio" placeholder="Escreva aqui...">
+            <ion-icon name="paper-plane-outline"></ion-icon>
+        </div>
+    </div>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
