--- a/index.html
+++ b/index.html
@@ -5,22 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto BatePapo Uol </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/reset.css">
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
+    <div class="conteudo-escondido bloqueado" onclick="chamarListaEscondida()">
+        <div>
+            <p>Escolha um contato para enviar mensagem:</p>
+            <div class="perfis">
+                <ion-icon name="people-sharp"></ion-icon>
+                <p>Todos</p>
+            </div>
+            <div class="perfil"></div>
+            <p >Escolha a visibilidade:</p>
+            <div class="publico">
+                <ion-icon name="lock-open-sharp"></ion-icon>
+                <p>Publico</p>
+            </div>
+            <div class="reservado">
+                <ion-icon name="lock-closed-sharp"></ion-icon>
+                <p>Reservadamente</p>
+            </div>
+        </div>
+    </div>
     <div class="conteudo">
         <div class="topo">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWkEE11QTE2vMNSjJgp02QPRHuxulhptE9oO1ceMZ-jzQ420zTtnWO1Q77DNJQypWy7B0&usqp=CAU">
-            <ion-icon name="people-sharp"></ion-icon>
+            <ion-icon name="people-sharp" onclick="chamarListaEscondida()"></ion-icon>
         </div>
-        <div class="mensagens"></div>
+        <div class="mensagens">
+           
+        </div>
         <div class="enviar">
             <input class="barra-envio" placeholder="Escreva aqui...">
-            <ion-icon name="paper-plane-outline"></ion-icon>
+            <ion-icon name="paper-plane-outline" onclick="adicionarMensagem()"></ion-icon>
         </div>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./scripts/scripts.js"></script>
 </body>
 </html>
